# android_hardware_qcom_display

./: Android.mk  Makefile.am  common.mk  configure.ac  displayengine  framebuffer.cpp  gpu.cpp  gpu.h  gralloc.cpp  gralloc_priv.h  libcopybit  libexternal  libgralloc  libhdmi  libhwcomposer  liblight  libmemtrack  liboverlay  libqdutils  libqservice  libvirtual  mapper.cpp  pmemalloc.cpp  pmemalloc.h
displayengine/libs/: common.mk
hdmi_cec/: Android.mk  QHDMIClient.cpp  QHDMIClient.h  qhdmi_cec.cpp
libcamera2/: Android.mk  QualcommCameraHardware.cpp  QualcommCameraHardware.h
libcopybit/: Android.mk  c2d2.h  copybit.c  copybit.cpp  copybit.h  copybit_c2d.cpp  copybit_priv.h  software_converter.cpp  software_converter.h
libexternal/: Android.mk  external.cpp  external.h
libgenlock/: Android.mk  genlock.cpp  genlock.h
libgralloc/: Android.mk  Makefile.am  adreno_utils.h  alloc_controller.cpp  alloc_controller.h  ashmemalloc.cpp  ashmemalloc.h  fb_priv.h  framebuffer.cpp  gpu.cpp  gpu.h  gr.h  gralloc.cpp  gralloc_priv.h  ionalloc.cpp  ionalloc.h  mapper.cpp  memalloc.h  pmem_bestfit_alloc.cpp  pmem_bestfit_alloc.h  pmemalloc.cpp  pmemalloc.h
libgralloc-qsd8k/: Android.mk  allocator.h  framebuffer.cpp  gpu.cpp  gpu.h  gr.h  gralloc.cpp  gralloc_priv.h  mapper.cpp  pmemalloc.cpp  pmemalloc.h
libgralloc-qsd8k/tests/: Android.mk  pmemalloc_test.cpp
libgralloc1/: gr_adreno_info.cpp  gr_adreno_info.h  gr_allocator.cpp  gr_buf_descriptor.h  gr_device_impl.cpp  gr_utils.cpp  gr_utils.h  gralloc_priv.h
libhdmi/: Android.mk  hdmi.cpp  hdmi.h
libhwcomposer/: Android.mk  external_display_only.h  hwc.cpp  hwc_ad.cpp  hwc_ad.h  hwc_copybit.cpp  hwc_copybit.h  hwc_copybitEngine.h  hwc_dump_layers.cpp  hwc_dump_layers.h  hwc_ext_observer.cpp  hwc_ext_observer.h  hwc_external.cpp  hwc_external.h  hwc_extonly.cpp  hwc_extonly.h  hwc_fbupdate.cpp  hwc_fbupdate.h  hwc_mdpcomp.cpp  hwc_mdpcomp.h  hwc_overlay.cpp  hwc_pip.cpp  hwc_pip.h  hwc_qbuf.h  hwc_qclient.cpp  hwc_qclient.h  hwc_qdcm.cpp  hwc_qdcm.h  hwc_qdcm_legacy.cpp  hwc_service.cpp  hwc_service.h  hwc_uevents.cpp  hwc_uimirror.cpp  hwc_uimirror.h  hwc_utils.cpp  hwc_utils.h  hwc_video.cpp  hwc_video.h  hwc_virtual.cpp  hwc_virtual.h  (+5 more)
liblight/: Android.mk  lights.c
libmemtrack/: Android.mk  kgsl.c  memtrack_msm.c
liboverlay/: Android.mk  mdpRotator.cpp  mdpWrapper.h  mdssRotator.cpp  overlay.cpp  overlay.h  overlayCtrl.cpp  overlayCtrlData.h  overlayCursor.cpp  overlayCursor.h  overlayImpl.h  overlayLib.cpp  overlayLib.h  overlayLibUI.cpp  overlayLibUI.h  overlayMdp.cpp  overlayMdp.h  overlayMdpRot.cpp  overlayMdssRot.cpp  overlayMem.h  overlayRotator.cpp  overlayRotator.h  overlayState.cpp  overlayState.h  overlayTransitions.cpp  overlayUtils.cpp  overlayUtils.h  overlayWriteback.cpp  overlayWriteback.h
liboverlay/pipes/: overlay3DPipe.h  overlayBypassPipe.h  overlayFloatingPipe.h  overlayGenPipe.cpp  overlayGenPipe.h  overlayHdmiPipe.h  overlayUIMirrorPipe.h  overlayVideoExtPipe.h
libqcomui/: Android.mk  qcom_ui.cpp  qcom_ui.h
libqcomui/qcomutils/: IdleInvalidator.cpp  IdleInvalidator.h  comptype.h  profiler.cpp  profiler.h
libqcomui/utils/: IdleInvalidator.cpp  IdleInvalidator.h  IdleTimer.cpp  IdleTimer.h  profiler.cpp  profiler.h
libqdutils/: Android.mk  Makefile.am  cb_utils.cpp  cb_utils.h  clear_regions.h  comptype.h  display_config.cpp  display_config.h  egl_handles.cpp  egl_handles.h  gpuformats.h  idle_invalidator.cpp  mdp_version.cpp  mdp_version.h  profiler.cpp  profiler.h  qcom_ui.cpp  qcom_ui.h  qdMetaData.cpp  qdMetaData.h  qd_utils.cpp  qd_utils.h
libqservice/: Android.mk  IQClient.cpp  IQClient.h  IQService.cpp  IQService.h  QService.cpp  QService.h  QServiceUtils.h
libtilerenderer/: Android.mk  tilerenderer.cpp  tilerenderer.h
libvirtual/: Android.mk  virtual.cpp  virtual.h
msm8084/: Android.mk  common.mk
msm8084/hdmi_cec/: Android.mk  qhdmi_cec.cpp  qhdmi_cec.h
msm8084/libcopybit/: Android.mk  c2dExt.h  copybit.cpp  copybit.h  copybit_c2d.cpp  copybit_priv.h  software_converter.cpp
msm8084/libexternal/: external.cpp  external.h
msm8084/libgenlock/: Android.mk  genlock.cpp  genlock.h
msm8084/libgralloc/: Android.mk  alloc_controller.cpp  alloc_controller.h  ashmemalloc.h  fb_priv.h  framebuffer.cpp  gpu.cpp  gpu.h  gr.h  gralloc.cpp  gralloc_priv.h  ionalloc.cpp  ionalloc.h  mapper.cpp  memalloc.h  pmemalloc.cpp  pmemalloc.h
msm8084/libhwcomposer/: Android.mk  external_display_only.h  hwc.cpp  hwc_ad.cpp  hwc_copybit.cpp  hwc_copybit.h  hwc_dump_layers.cpp  hwc_external.cpp  hwc_external.h  hwc_extonly.cpp  hwc_fbupdate.cpp  hwc_fbupdate.h  hwc_mdpcomp.cpp  hwc_mdpcomp.h  hwc_qclient.cpp  hwc_qclient.h  hwc_uevents.cpp  hwc_uimirror.cpp  hwc_uimirror.h  hwc_utils.cpp  hwc_utils.h  hwc_video.cpp  hwc_video.h  hwc_virtual.cpp  hwc_vpuclient.cpp  hwc_vsync.cpp
msm8084/liblight/: Android.mk  lights.c
msm8084/libmemtrack/: kgsl.c  memtrack_msm.c
msm8084/liboverlay/: Android.mk  mdpRotator.cpp  mdpWrapper.h  mdssRotator.cpp  overlay.cpp  overlay.h  overlayCtrl.cpp  overlayCtrlData.h  overlayImpl.h  overlayLib.cpp  overlayMdp.cpp  overlayMdp.h  overlayMdpRot.cpp  overlayMdssRot.cpp  overlayMem.h  overlayRotator.cpp  overlayRotator.h  overlayState.h  overlayUtils.cpp  overlayUtils.h  overlayWriteback.cpp  overlayWriteback.h
msm8084/libqcomui/: Android.mk  qcom_ui.h
msm8084/libqdutils/: Android.mk  cb_utils.cpp  display_config.h  idle_invalidator.h  mdp_version.cpp  mdp_version.h  profiler.cpp  qdMetaData.cpp  qdMetaData.h
msm8084/libqservice/: Android.mk  IQService.cpp  IQService.h  QService.cpp  QService.h  (+1 more)
msm8226/: Android.mk  common.mk
msm8909/: Android.mk  common.mk
msm8960/: Android.mk  common.mk
msm8974/: Android.mk  common.mk
msm8994/: Android.mk  common.mk
msm8996/: Android.mk  common.mk
msm8x26/: Android.mk  common.mk
msmcobalt/: Android.mk  common.mk
msmcobalt/libgralloc/: Android.mk  Makefile.am  adreno_utils.h  alloc_controller.cpp  gpu.cpp  gr.h  gralloc_priv.h  mapper.cpp
yuv420sp2rgb/: Android.mk  cmdline.c  yuv420sp2rgb.c
(+730 files in other folders)
